fix custom control z-index issue

--- a/assets/sass/material/_selection-control.scss
+++ b/assets/sass/material/_selection-control.scss
@@ -36,7 +36,6 @@
     left: 0;
     transform: scale(.87, .87) translateZ(0);
     width: ($selection-control-indicator-size * 2);
-    z-index: -1;
   }
 }
 
